2007-04-10 Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Forgot to add to previuos commit
	(bug 428104).

2007-04-09 Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Added a 'do action' button 
	(bug 424463).

2007-04-09 Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: 
	* plugins/interface_view.py: Make 'show' buttons insensitive when
	nothing is selected (bug 424462).
	* src/accerciser.in: Put ~/.accerciser in sys.path for convinient user
	imports.

2007-04-09 Eitan Isaacson  <eitan@ascender.com>

	* help/C/accerciser.xml: Updated documentation about global
	hotkeys (bug 424489).

2007-04-06 Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: 
	* src/lib/accerciser/plugin_manager.py: PluginView now grabs focus
	when alt+<num> is pressed (bug 426744).

2007-04-06 Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Consume event if HotkeyManager
	handles keypress event (bug 424501).
	* src/lib/accerciser/hotkey_manager.py: Return true if keypress
	was handled in hotkeyPress()

2007-04-06 Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: 
	* src/lib/accerciser/accerciser.py: Changed the default global hotkeys.

2007-04-06 Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: Put monitor options in paned
	instead of an expander (bug 425474)
	* plugins/event_monitor.py: Put save dialog inline with run()
	instead of a callback.
	* plugins/ipython_view.py: Made font monospace.

2007-04-06 Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/plugin_manager.py: Reverted plugin tab popup
	menus.	It was not impleneted correctly. We will do it better at a
	later date.

2007-04-05 Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/plugin_manager.py: Got the popup key working.
	* src/lib/accerciser/hotkey_manager.py: Made the keyval
	cellrenderer a simple CellRendererText instead of an inaccessible
	CellRendererColumn.