@@ -1,5 +1,10 @@
 2007-04-10 Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/script_playback.py: Added run(). Made it all
+	a bit more robust.
+	
+2007-04-10 Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/interface_view.glade: Forgot to add to previuos commit
 	(bug 428104).
 
